# kiz

./: CMakeLists.txt  README.md
docs/: main.md
examples/: be_imported.kiz  error.kiz  fib_test.kiz  func.kiz  import_test.kiz  list_obj.kiz  object_stmt.kiz  onestop.kiz  oop.kiz  try.kiz  try_test.kiz
include/: ast.hpp  lexer.hpp  models.hpp  opcode.hpp  vm.hpp
include/error/: error_reporter.hpp
include/repl/: repl.hpp
include/util/: error_reporter.hpp
libs/builtins/: bool_obj.cpp  builtin_functions.cpp  decimal_obj.cpp  dict_obj.cpp  int_obj.cpp  list_obj.cpp  nil_obj.cpp  rational_obj.cpp  str_obj.cpp
libs/builtins/builtin_methods/: list_obj.hpp
libs/builtins/include/: builtin_methods.hpp
libs/math/include/: math_lib.hpp
src/: kiz.hpp  main.cpp
src/error/: error_reporter.cpp
src/input_helper/: repl_input_helper.cpp  repl_input_helper.hpp
src/ir_gen/: gen_expr.cpp  gen_stmt.cpp  ir_gen.cpp  ir_gen.hpp
src/lexer/: lexer.cpp  lexer.hpp
src/models/: models.hpp
src/op_code/: opcode.hpp
src/parser/: ast.hpp  parse_expr.cpp  parse_stmt.cpp  parser.cpp  parser.hpp
src/repl/: repl.cpp  repl.hpp  repl_input_helper.cpp  repl_readline.cpp
src/util/: src_manager.cpp  src_manager.hpp
src/vm/: entry_builtins.cpp  entry_std_modules.cpp  exec_calc.cpp  exec_call.cpp  exec_get_set.cpp  exec_import.cpp  exec_misc.cpp  vm.cpp  vm.hpp
